--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:server1\" \"npm run dev:server2\" \"vite\"",
+    "dev:server1": "node Backend/LineServe.js",
+    "dev:server2": "node Backend/serve.js",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "concurrently": "^9.1.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   },
